[package]
name = "mmi"
description = "OS Triage for Anyone and Everyone"
license = "Apache-2.0"
version = "2025.3.23"
edition = "2024"
homepage = "https://4n6ir.com"
repository = "https://github.com/jblukach/mmi"
readme = "README.md"

[dependencies]
blake3 = "1.7.0"
colored = "3.0.0"
csv = "1.3.1"
poppy-filters = "0.2.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde_json = "1.0.140"
sha2 = "0.10.8"

[profile.release]
strip = true