[package]
name = "mmi"
description = "OS Triage for Anyone and Everyone"
license = "Apache-2.0"
version = "2026.2.10"
edition = "2024"
homepage = "https://lukach.io"
repository = "https://github.com/jblukach/mmi"
readme = "README.md"

[dependencies]
blake3 = "1.8.3"
colored = "3.1.1"
csv = "1.4.0"
poppy-filters = "0.2.1"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde_json = "1.0.149"
sha2 = "0.10.9"

[profile.release]
strip = true